test/sh/error/function_proto_param_bad_type.sk
f(x: does_not_exist) {
	# do nothing
}